--- a/frontend/src/pages/index.astro
+++ b/frontend/src/pages/index.astro
@@ -1,6 +1,7 @@
 ---
 import Header from '../components/Header.tsx';
 import RecipeForm from '../components/RecipeFrom.tsx';
+import '../styles/global.css';
 ---
 
 <html lang="ja">
